# tree-sitter-carbon

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  bun.lockb  generate-tests.ts  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: build.yml
bindings/c/: tree-sitter-carbon.h  tree-sitter-carbon.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_carbon/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCarbonTests/: TreeSitterCarbonTests.swift
src/: grammar.json  parser.c
